--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,6 @@
 
 body,
 html {
-
     background-color: #000;
     color: #ffffff;
 }
@@ -19,4 +18,15 @@ a:hover,
 a:visited {
     color: unset;
     text-decoration: none;
+}
+
+.dsmeta-contanner {
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+
+}
+
+#sales {
+    padding: 40px 10px;
 }
